# RevOps

./: .gitignore  README.md  benchmarks.csv  chart_script.py  chart_script_1.py  code-scaffolding.md  demo-script.md  marketing_channels.csv  pipeline_deals.csv  pyproject.toml  revenue_customers.csv  revops-dashboard-spec.md  script.py  script_1.py  script_2.py  script_3.py  script_4.py  script_5.py
docs/: architecture-plan.md  business-user-guide.md  developer-guide.md
src/revops/: __init__.py  config.py  data.py  data_generation.py  validation.py
src/revops/ai/: __init__.py  insights.py
src/revops/analytics/: __init__.py  marketing.py  pipeline.py  revenue.py  utils.py
streamlit_app/: __init__.py  app.py  theme.py
tests/: conftest.py  test_ai_insights.py  test_marketing.py  test_pipeline.py  test_revenue.py  test_validation.py
